--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="description" content="Klavyede ne kadar hızlısın, kendini test et. 1 dakikada kaç kelime yazabildiğini gör.">
+    <meta name="keywords" content="Klavye, hız, testi">
+    <link rel="icon" href="<%= BASE_URL %>/favicon.ico">
+    <title>Kendini Test Et</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
